--- a/Day-1/CalculatorTestRunner.html
+++ b/Day-1/CalculatorTestRunner.html
@@ -14,6 +14,7 @@
 	}
 	</style>
 	<script>
+	var trace = false;
 	function test(title, testFn){
 		var newTest = document.createElement("li");
 		newTest.innerHTML = title;
