--- a/Day-3/ProgrammingTechniques/progTechniques.html
+++ b/Day-3/ProgrammingTechniques/progTechniques.html
@@ -8,6 +8,7 @@
 		document.body.innerHTML += "<div>" + text + "</div>";
 	}
 	function printList(title, list){
+		list = list || [];
 		var attributes = [];
 		var content = "<h3>" + title + "</h3>"
 		content += "<table border='1px solid' cellpadding='5px'><tr>"
